[package]
name = "amethyst_nphysics"
version = "0.2.1"
authors = ["Andrea Catania <info@andreacatania.com>"]
edition = "2018"
repository = "https://github.com/AndreaCatania/amethyst_nphysics"
description = "The NPhysics backend for the `amethyst_physics` crate."
keywords = ["physics", "nphysics", "dynamics", "3D", "amethyst"]
categories = ["science", "game-engines", "simulation", "games"]
readme = "README.md"
license = "MIT"

[dependencies]
amethyst_core = "0.15.3"
amethyst_physics = { git = "https://github.com/kerkmann/amethyst_physics", branch = "master" }
log = "0.4.6"
ncollide3d = "0.23.0"
nphysics3d = "0.15.1"
generational-arena = "0.2.3"
alga = { version = "0.9.0", default-features = false }
